@@ -15,12 +15,10 @@
  */
 package com.github.tomakehurst.wiremock.core;
 
+import static com.github.tomakehurst.wiremock.common.ParameterUtils.getFirstNonNull;
 import static com.github.tomakehurst.wiremock.stubbing.ServeEvent.NOT_MATCHED;
 import static com.github.tomakehurst.wiremock.stubbing.ServeEvent.TO_LOGGED_REQUEST;
-import static com.google.common.base.MoreObjects.firstNonNull;
-import static com.google.common.collect.FluentIterable.from;
 import static com.google.common.collect.Iterables.contains;
-import static com.google.common.collect.Iterables.transform;
 
 import com.github.tomakehurst.wiremock.admin.AdminRoutes;
 import com.github.tomakehurst.wiremock.admin.LimitAndOffsetPaginator;
@@ -30,6 +28,7 @@ import com.github.tomakehurst.wiremock.common.FileSource;
 import com.github.tomakehurst.wiremock.common.xml.Xml;
 import com.github.tomakehurst.wiremock.extension.*;
 import com.github.tomakehurst.wiremock.extension.requestfilter.RequestFilter;
+import com.github.tomakehurst.wiremock.extension.requestfilter.RequestFilterV2;
 import com.github.tomakehurst.wiremock.global.GlobalSettings;
 import com.github.tomakehurst.wiremock.http.*;
 import com.github.tomakehurst.wiremock.matching.RequestMatcherExtension;
@@ -42,15 +41,12 @@ import com.github.tomakehurst.wiremock.store.SettingsStore;
 import com.github.tomakehurst.wiremock.store.Stores;
 import com.github.tomakehurst.wiremock.stubbing.*;
 import com.github.tomakehurst.wiremock.verification.*;
-import com.google.common.base.Function;
-import com.google.common.base.Optional;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import org.apache.commons.lang3.mutable.MutableBoolean;
 
 public class WireMockApp implements StubServer, Admin {
@@ -75,6 +71,8 @@ public class WireMockApp implements StubServer, Admin {
 
   private Options options;
 
+  private Extensions extensions;
+
   public WireMockApp(Options options, Container container) {
     if (!options.getDisableOptimizeXmlFactoriesLoading() && FACTORIES_LOADING_OPTIMIZED.isFalse()) {
       Xml.optimizeFactoriesLoading();
@@ -91,14 +89,23 @@ public class WireMockApp implements StubServer, Admin {
 
     this.settingsStore = stores.getSettingsStore();
 
+    extensions =
+        new Extensions(
+            options.getDeclaredExtensions(),
+            this,
+            options,
+            stores,
+            options.filesRoot().child(FILES_ROOT));
+    extensions.load();
+
     Map<String, RequestMatcherExtension> customMatchers =
-        options.extensionsOfType(RequestMatcherExtension.class);
+        extensions.ofType(RequestMatcherExtension.class);
 
     requestJournal =
         options.requestJournalDisabled()
             ? new DisabledRequestJournal()
             : new StoreBackedRequestJournal(
-                options.maxRequestJournalEntries(),
+                options.maxRequestJournalEntries().orElse(null),
                 customMatchers,
                 stores.getRequestJournalStore());
 
@@ -108,13 +115,15 @@ public class WireMockApp implements StubServer, Admin {
             stores.getStubStore(),
             scenarios,
             customMatchers,
-            options.extensionsOfType(ResponseDefinitionTransformer.class),
+            extensions.ofType(ResponseDefinitionTransformer.class),
+            extensions.ofType(ResponseDefinitionTransformerV2.class),
             stores.getFilesBlobStore(),
-            ImmutableList.copyOf(options.extensionsOfType(StubLifecycleListener.class).values()));
+            ImmutableList.copyOf(extensions.ofType(StubLifecycleListener.class).values()));
     nearMissCalculator = new NearMissCalculator(stubMappings, requestJournal, scenarios);
-    recorder = new Recorder(this, stores.getRecorderStateStore());
+    recorder =
+        new Recorder(this, extensions, stores.getFilesBlobStore(), stores.getRecorderStateStore());
     globalSettingsListeners =
-        ImmutableList.copyOf(options.extensionsOfType(GlobalSettingsListener.class).values());
+        ImmutableList.copyOf(extensions.ofType(GlobalSettingsListener.class).values());
 
     this.container = container;
     loadDefaultMappings();
@@ -125,8 +134,9 @@ public class WireMockApp implements StubServer, Admin {
       MappingsLoader defaultMappingsLoader,
       MappingsSaver mappingsSaver,
       boolean requestJournalDisabled,
-      Optional<Integer> maxRequestJournalEntries,
+      Integer maxRequestJournalEntries,
       Map<String, ResponseDefinitionTransformer> transformers,
+      Map<String, ResponseDefinitionTransformerV2> v2transformers,
       Map<String, RequestMatcherExtension> requestMatchers,
       FileSource rootFileSource,
       Container container) {
@@ -149,21 +159,20 @@ public class WireMockApp implements StubServer, Admin {
             scenarios,
             requestMatchers,
             transformers,
+            v2transformers,
             stores.getFilesBlobStore(),
-            Collections.<StubLifecycleListener>emptyList());
+            Collections.emptyList());
     this.container = container;
     nearMissCalculator = new NearMissCalculator(stubMappings, requestJournal, scenarios);
-    recorder = new Recorder(this, stores.getRecorderStateStore());
+    recorder =
+        new Recorder(this, extensions, stores.getFilesBlobStore(), stores.getRecorderStateStore());
     globalSettingsListeners = Collections.emptyList();
     loadDefaultMappings();
   }
 
   public AdminRequestHandler buildAdminRequestHandler() {
     AdminRoutes adminRoutes =
-        AdminRoutes.forServer(
-            options.extensionsOfType(AdminApiExtension.class).values(),
-            options.getNotMatchedRenderer(),
-            stores);
+        AdminRoutes.forServer(extensions.ofType(AdminApiExtension.class).values(), stores);
     return new AdminRequestHandler(
         adminRoutes,
         this,
@@ -171,11 +180,14 @@ public class WireMockApp implements StubServer, Admin {
         options.getAdminAuthenticator(),
         options.getHttpsRequiredForAdminApi(),
         getAdminRequestFilters(),
+        getV2AdminRequestFilters(),
         options.getDataTruncationSettings());
   }
 
   public StubRequestHandler buildStubRequestHandler() {
-    Map<String, PostServeAction> postServeActions = options.extensionsOfType(PostServeAction.class);
+    Map<String, PostServeAction> postServeActions = extensions.ofType(PostServeAction.class);
+    Map<String, ServeEventListener> serveEventListeners =
+        extensions.ofType(ServeEventListener.class);
     BrowserProxySettings browserProxySettings = options.browserProxySettings();
     return new StubRequestHandler(
         this,
@@ -193,37 +205,41 @@ public class WireMockApp implements StubServer, Admin {
                 options.getStubCorsEnabled(),
                 options.getProxyTargetRules(),
                 options.proxyTimeout()),
-            ImmutableList.copyOf(options.extensionsOfType(ResponseTransformer.class).values())),
+            ImmutableList.copyOf(extensions.ofType(ResponseTransformer.class).values()),
+            ImmutableList.copyOf(extensions.ofType(ResponseTransformerV2.class).values())),
         this,
         postServeActions,
+        serveEventListeners,
         requestJournal,
         getStubRequestFilters(),
+        getV2StubRequestFilters(),
         options.getStubRequestLoggingDisabled(),
-        options.getDataTruncationSettings());
+        options.getDataTruncationSettings(),
+        options.getNotMatchedRendererFactory().apply(extensions));
   }
 
   private List<RequestFilter> getAdminRequestFilters() {
-    return FluentIterable.from(options.extensionsOfType(RequestFilter.class).values())
-        .filter(
-            new Predicate<RequestFilter>() {
-              @Override
-              public boolean apply(RequestFilter filter) {
-                return filter.applyToAdmin();
-              }
-            })
-        .toList();
+    return extensions.ofType(RequestFilter.class).values().stream()
+        .filter(RequestFilter::applyToAdmin)
+        .collect(Collectors.toList());
+  }
+
+  private List<RequestFilterV2> getV2AdminRequestFilters() {
+    return extensions.ofType(RequestFilterV2.class).values().stream()
+        .filter(RequestFilterV2::applyToAdmin)
+        .collect(Collectors.toList());
   }
 
   private List<RequestFilter> getStubRequestFilters() {
-    return FluentIterable.from(options.extensionsOfType(RequestFilter.class).values())
-        .filter(
-            new Predicate<RequestFilter>() {
-              @Override
-              public boolean apply(RequestFilter filter) {
-                return filter.applyToStubs();
-              }
-            })
-        .toList();
+    return extensions.ofType(RequestFilter.class).values().stream()
+        .filter(RequestFilter::applyToStubs)
+        .collect(Collectors.toList());
+  }
+
+  private List<RequestFilterV2> getV2StubRequestFilters() {
+    return extensions.ofType(RequestFilterV2.class).values().stream()
+        .filter(RequestFilterV2::applyToStubs)
+        .collect(Collectors.toList());
   }
 
   private void loadDefaultMappings() {
@@ -235,14 +251,15 @@ public class WireMockApp implements StubServer, Admin {
   }
 
   @Override
-  public ServeEvent serveStubFor(Request request) {
-    ServeEvent serveEvent = stubMappings.serveFor(request);
+  public ServeEvent serveStubFor(ServeEvent initialServeEvent) {
+    ServeEvent serveEvent = stubMappings.serveFor(initialServeEvent);
 
     if (serveEvent.isNoExactMatch()) {
       if (browserProxyingEnabled
-          && request.isBrowserProxyRequest()
+          && serveEvent.getRequest().isBrowserProxyRequest()
           && getGlobalSettings().getSettings().getProxyPassThrough()) {
-        return ServeEvent.of(serveEvent.getRequest(), ResponseDefinition.browserProxy(request));
+        return ServeEvent.ofUnmatched(
+            serveEvent.getRequest(), ResponseDefinition.browserProxy(serveEvent.getRequest()));
       }
     }
 
@@ -379,10 +396,10 @@ public class WireMockApp implements StubServer, Admin {
   public FindRequestsResult findUnmatchedRequests() {
     try {
       List<LoggedRequest> requests =
-          from(requestJournal.getAllServeEvents())
+          requestJournal.getAllServeEvents().stream()
               .filter(NOT_MATCHED)
-              .transform(TO_LOGGED_REQUEST)
-              .toList();
+              .map(TO_LOGGED_REQUEST)
+              .collect(Collectors.toList());
       return FindRequestsResult.withRequests(requests);
     } catch (RequestJournalDisabledException e) {
       return FindRequestsResult.withRequestJournalDisabled();
@@ -409,15 +426,10 @@ public class WireMockApp implements StubServer, Admin {
   @Override
   public FindNearMissesResult findNearMissesForUnmatchedRequests() {
     ImmutableList.Builder<NearMiss> listBuilder = ImmutableList.builder();
-    Iterable<ServeEvent> unmatchedServeEvents =
-        from(requestJournal.getAllServeEvents())
-            .filter(
-                new Predicate<ServeEvent>() {
-                  @Override
-                  public boolean apply(ServeEvent input) {
-                    return input.isNoExactMatch();
-                  }
-                });
+    List<ServeEvent> unmatchedServeEvents =
+        requestJournal.getAllServeEvents().stream()
+            .filter(ServeEvent::isNoExactMatch)
+            .collect(Collectors.toList());
 
     for (ServeEvent serveEvent : unmatchedServeEvents) {
       listBuilder.addAll(nearMissCalculator.findNearestTo(serveEvent.getRequest()));
@@ -542,7 +554,7 @@ public class WireMockApp implements StubServer, Admin {
   public void importStubs(StubImport stubImport) {
     List<StubMapping> mappings = stubImport.getMappings();
     StubImport.Options importOptions =
-        firstNonNull(stubImport.getImportOptions(), StubImport.Options.DEFAULTS);
+        getFirstNonNull(stubImport.getImportOptions(), StubImport.Options.DEFAULTS);
 
     for (int i = mappings.size() - 1; i >= 0; i--) {
       StubMapping mapping = mappings.get(i);
@@ -556,15 +568,7 @@ public class WireMockApp implements StubServer, Admin {
     }
 
     if (importOptions.getDeleteAllNotInImport()) {
-      Iterable<UUID> ids =
-          transform(
-              mappings,
-              new Function<StubMapping, UUID>() {
-                @Override
-                public UUID apply(StubMapping input) {
-                  return input.getId();
-                }
-              });
+      Iterable<UUID> ids = mappings.stream().map(StubMapping::getId).collect(Collectors.toList());
       for (StubMapping mapping : listAllStubMappings().getMappings()) {
         if (!contains(ids, mapping.getId())) {
           removeStubMapping(mapping);
